--- a/src/index.css
+++ b/src/index.css
@@ -3,23 +3,29 @@
 @tailwind utilities;
 
 @layer components {
-  .btn-primary {
-      @apply text-stone-100 bg-sky-700 hover:bg-sky-600;
-  }
+    .btn-primary {
+        @apply bg-sky-700 text-stone-100 hover:bg-sky-600;
+    }
 
-  .btn-text {
-      @apply text-stone-900 bg-transparent hover:text-stone-600;
-  }
+    .btn-text {
+        @apply bg-transparent text-stone-900 hover:text-stone-600;
+    }
 
-  .btn-outline {
-    @apply text-brand_stone bg-transparent border-2 border-gray-500 hover:bg-gray-400 transition-all duration-300
-  }
+    .btn-outline {
+        @apply border-2 border-gray-500 bg-transparent text-brand_stone transition-all duration-300 hover:bg-gray-400;
+    }
 
-  .small {@apply p-2}
+    .small {
+        @apply p-2;
+    }
 
-  .medium {@apply p-3}
+    .medium {
+        @apply p-3;
+    }
 
-  .large {@apply p-4}
+    .large {
+        @apply p-4;
+    }
 }
 
 /* Google Font Raleway */
