--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,26 @@
     .activeTab {
         @apply border-b-2 border-sky-500 text-sky-500;
     }
+
+    .scrollbar::-webkit-scrollbar {
+        width: 1px;
+        height: 20px;
+    }
+
+    .scrollbar::-webkit-scrollbar-track {
+        border-radius: 100vh;
+        background: #f7f4ed;
+    }
+
+    .scrollbar::-webkit-scrollbar-thumb {
+        background: #e0cbcb;
+        border-radius: 100vh;
+        border: 3px solid #f6f7ed;
+    }
+
+    .scrollbar::-webkit-scrollbar-thumb:hover {
+        background: #c0a0b9;
+    }
 }
 
 /* Google Font Raleway */
